Crash on meta_window_unmanage
There are few old bugs with a similar backtrace, but considering how old they are I'm opening a new one. This is happening with a6217c72 and !1441 on Wayland, I can reproduce it 100% of the time by launching Google Earth Pro (XWayland).
#0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
tid = <optimized out>
ret = 0
pd = <optimized out>
old_mask = {__val = {93842840623312}}
ret = <optimized out>
#1 0x00007f9f900a0953 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2 0x00007f9f90051ea8 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
ret = <optimized out>
#3 0x000055597c1faf42 in dump_gjs_stack_on_signal_handler (signo=6) at ../gnome-shell/src/main.c:447
sa = {__sigaction_handler = {sa_handler = 0x55597c1fad50 <dump_gjs_stack_alarm_sigaction>, sa_sigaction = 0x55597c1fad50 <dump_gjs_stack_alarm_sigaction>}, sa_mask = {__val = {0 <repeats 16 times>}}, sa_flags = 0, sa_restorer = 0x0}
i = <optimized out>
#4 0x00007f9f90051f50 in <signal handler called> () at /usr/lib/libc.so.6
#5 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
tid = <optimized out>
ret = 0
pd = <optimized out>
old_mask = {__val = {0}}
ret = <optimized out>
#6 0x00007f9f900a0953 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#7 0x00007f9f90051ea8 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
ret = <optimized out>
#8 0x00007f9f9003b53d in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x20, sa_sigaction = 0x20}, sa_mask = {__val = {140323310029543, 93842840623312, 154, 93842941735296, 140323310063144, 206158430208, 0, 140732437398192, 15884771799206582784, 93842938807440, 18446744073709551496, 0, 140323310870056, 140323296461531, 140732437398304, 93842841094800}}, sa_flags = -1878331805, sa_restorer = 0x7f9f903bc658}
#9 0x00007f9f91066064 in () at /usr/lib/libglib-2.0.so.0
#10 0x00007f9f910d0130 in g_assertion_message_expr () at /usr/lib/libglib-2.0.so.0
#11 0x00007f9f902dd963 in meta_window_unmanage (window=0x55597d34b2d0, timestamp=<optimized out>) at ../mutter/src/core/window.c:1517
workspace_manager = 0x55597d354a90
tmp = <optimized out>
__func__ = "meta_window_unmanage"
#12 0x00007f9f9030e487 in handle_other_xevent (x11_display=<optimized out>, event=<optimized out>) at ../mutter/src/x11/events.c:1463
timestamp = 705811
display = <optimized out>
workspace_manager = 0x55597d354a90
modified = <optimized out>
window = <optimized out>
property_for_window = <optimized out>
bypass_gtk = 0
#13 0x00007f9f90311390 in meta_x11_display_handle_xevent (event=0x7ffed2f087a0, x11_display=<optimized out>) at ../mutter/src/x11/events.c:2001
backend = <optimized out>
CoglTraceMetaX11DisplayHandleXevent = {begin_time = 0, name = 0x0, description = 0x0}
display = 0x55597d354d40
modified = <optimized out>
bypass_gtk = 0
input_event = <optimized out>
cursor_tracker = <optimized out>
wayland_compositor = <optimized out>
context = <optimized out>
bypass_compositor = 0
x11_display = <optimized out>
#14 xevent_filter (xevent=0x7ffed2f087a0, event=<optimized out>, data=<optimized out>) at ../mutter/src/x11/events.c:2048
x11_display = <optimized out>
#15 0x00007f9f8ffa386f in gdk_event_apply_filters (xevent=xevent@entry=0x7ffed2f087a0, event=event@entry=0x555982f0f0d0, window=window@entry=0x0) at ../gtk/gdk/x11/gdkeventsource.c:79
filter = 0x55597caed750
node = <optimized out>
tmp_list = 0x55597caa16b0 = {0x55597caed750}
result = <optimized out>
#16 0x00007f9f8ffab435 in gdk_event_source_translate_event (xevent=0x7ffed2f087a0, event_source=0x5559822b8110) at ../gtk/gdk/x11/gdkeventsource.c:198
dpy = 0x5559817c3b40
event = 0x555982f0f0d0
result = GDK_FILTER_CONTINUE
event_translator = <optimized out>
event = <optimized out>
xevent = {type = 18, xany = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185}, xkey = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, keycode = 0, same_screen = 0}, xbutton = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, button = 0, same_screen = 0}, xmotion = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, is_hint = 0 '\000', same_screen = 0}, xcrossing = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, mode = 0, detail = 0, same_screen = 0, focus = 0, state = 92733440}, xfocus = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, mode = 46137357, detail = 0}, xexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, x = 46137357, y = 0, width = 0, height = 0, count = 0}, xgraphicsexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, drawable = 1185, x = 46137357, y = 0, width = 0, height = 0, count = 0, major_code = 0, minor_code = 2}, xnoexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, drawable = 1185, major_code = 46137357, minor_code = 0}, xvisibility = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, state = 46137357}, xcreatewindow = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, override_redirect = 0}, xdestroywindow = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357}, xunmap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, from_configure = 0}, xmap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, override_redirect = 0}, xmaprequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357}, xreparent = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, parent = 0, x = 0, y = 0, override_redirect = 2}, xconfigure = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, above = 0, override_redirect = 0}, xgravity = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, x = 0, y = 0}, xresizerequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, width = 46137357, height = 0}, xconfigurerequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, above = 0, detail = 0, value_mask = 0}, xcirculate = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, place = 0}, xcirculaterequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, place = 0}, xproperty = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, atom = 46137357, time = 0, state = 0}, xselectionclear = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, selection = 46137357, time = 0}, xselectionrequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, owner = 1185, requestor = 46137357, selection = 0, target = 0, property = 2, time = 0}, xselection = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, requestor = 1185, selection = 46137357, target = 0, property = 0, time = 2}, xcolormap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, colormap = 46137357, new = 0, state = 0}, xclient = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, message_type = 46137357, format = 0, data = {b = "\000\000\000\000\000\000\000\000\002\000\000\000\000\000\000\000\000\000\000", s = {0, 0, 0, 0, 2, 0, 0, 0, 0, 0}, l = {0, 2, 0, 0, 0}}}, xmapping = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, request = 46137357, first_keycode = 0, count = 0}, xerror = {type = 18, display = 0x124a, resourceid = 0, serial = 93842912852800, error_code = 161 '\241', request_code = 4 '\004', minor_code = 0 '\000'}, xkeymap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, key_vector = "\r\000\300\002", '\000' <repeats 20 times>, "\002\000\000\000\000\000\000"}, xgeneric = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, extension = 1185, evtype = 0}, xcookie = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, extension = 1185, evtype = 0, cookie = 46137357, data = 0x0}, pad = {18, 4682, 0, 93842912852800, 1185, 46137357, 0, 0, 2, 0, 0, 0, 93840833183744, 0, 93842832947712, 93842925777456, 0, 93842832947840, 93842925777024, 0, 93842923662784, 93842925777856, 0, 93842923662928}}
xdisplay = 0x5559817c3b40
event_source = 0x5559822b8110
display_x11 = 0x55597cb1dc10
#17 _gdk_x11_display_queue_events (display=0x55597cb1dc10) at ../gtk/gdk/x11/gdkeventsource.c:341
event = <optimized out>
xevent = {type = 18, xany = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185}, xkey = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, keycode = 0, same_screen = 0}, xbutton = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, button = 0, same_screen = 0}, xmotion = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, state = 0, is_hint = 0 '\000', same_screen = 0}, xcrossing = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, root = 46137357, subwindow = 0, time = 0, x = 2, y = 0, x_root = 0, y_root = 0, mode = 0, detail = 0, same_screen = 0, focus = 0, state = 92733440}, xfocus = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, mode = 46137357, detail = 0}, xexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, x = 46137357, y = 0, width = 0, height = 0, count = 0}, xgraphicsexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, drawable = 1185, x = 46137357, y = 0, width = 0, height = 0, count = 0, major_code = 0, minor_code = 2}, xnoexpose = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, drawable = 1185, major_code = 46137357, minor_code = 0}, xvisibility = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, state = 46137357}, xcreatewindow = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, override_redirect = 0}, xdestroywindow = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357}, xunmap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, from_configure = 0}, xmap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, override_redirect = 0}, xmaprequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357}, xreparent = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, parent = 0, x = 0, y = 0, override_redirect = 2}, xconfigure = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, above = 0, override_redirect = 0}, xgravity = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, x = 0, y = 0}, xresizerequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, width = 46137357, height = 0}, xconfigurerequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, x = 0, y = 0, width = 0, height = 0, border_width = 2, above = 0, detail = 0, value_mask = 0}, xcirculate = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, event = 1185, window = 46137357, place = 0}, xcirculaterequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, parent = 1185, window = 46137357, place = 0}, xproperty = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, atom = 46137357, time = 0, state = 0}, xselectionclear = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, selection = 46137357, time = 0}, xselectionrequest = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, owner = 1185, requestor = 46137357, selection = 0, target = 0, property = 2, time = 0}, xselection = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, requestor = 1185, selection = 46137357, target = 0, property = 0, time = 2}, xcolormap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, colormap = 46137357, new = 0, state = 0}, xclient = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, message_type = 46137357, format = 0, data = {b = "\000\000\000\000\000\000\000\000\002\000\000\000\000\000\000\000\000\000\000", s = {0, 0, 0, 0, 2, 0, 0, 0, 0, 0}, l = {0, 2, 0, 0, 0}}}, xmapping = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, request = 46137357, first_keycode = 0, count = 0}, xerror = {type = 18, display = 842912852800, error_code = 161 '\241', request_code = 4 '\004', minor_code = 0 '\000'}, xkeymap = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, window = 1185, key_vector = "\r\000\300\002", '\000' <repeats 20 times>, "\002\000\000\000\000\000\000"}, xgeneric = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, extension = 1185, evtype = 0}, xcookie = {type = 18, serial = 4682, send_event = 0, display = 0x5559817c3b40, extension = 1185, evtype = 0, cookie = 46137357, data = 0x0}, pad = {18, 4682, 0, 93842912852800, 1185, 46137357, 0, 0, 2, 0, 0, 0, 93840833183744, 0, 93842832947712, 93842925777456, 0, 93842832947840, 93842925777024, 0, 93842923662784, 93842925777856, 0, 93842923662928}}
xdisplay = 0x5559817c3b40
event_source = 0x5559822b8110
display_x11 = 0x55597cb1dc10
#18 0x00007f9f8ff51029 in gdk_display_get_event (display=0x55597cb1dc10) at ../gtk/gdk/gdkdisplay.c:442
__func__ = "gdk_display_get_event"
#19 0x00007f9f8ffab7c8 in gdk_event_source_dispatch.lto_priv () at ../gtk/gdk/x11/gdkeventsource.c:354
#20 0x00007f9f910a298b in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#21 0x00007f9f910ff339 in () at /usr/lib/libglib-2.0.so.0
#22 0x00007f9f910a1f5f in g_main_loop_run () at /usr/lib/libglib-2.0.so.0
#23 0x00007f9f902c3c4b in meta_context_run_main_loop (context=context@entry=0x55597c9243f0, error=error@entry=0x7ffed2f08aa0) at ../mutter/src/core/meta-context.c:482
priv = 0x55597c924370
__func__ = "meta_context_run_main_loop"
#24 0x000055597c1fa51c in main (argc=<optimized out>, argv=<optimized out>) at ../gnome-shell/src/main.c:668
context = 0x55597c9243f0
error = 0x0
ecode = 0
Edited by François Guerraz